# Smart-Bank-Management-System

./: .gitignore  CMakeLists.txt  README.md  ai_bridge.py  ai_input.json
include/: AIAnalyzer.h  Account.h  BankSystem.h  Budget.h  FinancialChatbot.h  Goal.h  MainWindow.h  SmartAnalyzer.h  Transaction.h  User.h
src/: Account.cpp  BankSystem.cpp  Budget.cpp  FinancialChatbot.cpp  Goal.cpp  MainWindow.cpp  SmartAnalyzer.cpp  Transaction.cpp  User.cpp  main.cpp
